--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <div class="container">
     <h1>Etymology Studio</h1>
     <p>WooCommerce Website Case Study</p>
   </header>
@@ -53,6 +54,7 @@
   <footer>
     <p><a href="https://wcet.waketech.edu/ushrestha/WEB260/wordpress/" target="_blank">🔗 Visit Live Site</a></p>
   </footer>
+</div>
 </body>
 </html>
 
