--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="main-content">
   <header>
-    <div class="container">
+   
     <h1>Etymology Studio</h1>
     <p>WooCommerce Website Case Study</p>
   </header>
