--- a/index.html
+++ b/index.html
@@ -8,55 +8,60 @@
 </head>
 <body>
   <div class="main-content">
-  <header>
-   
-    <h1>Etymology Studio</h1>
-    <p>WooCommerce Website Case Study</p>
-  </header>
 
-  <section>
-    <h2>Project Overview</h2>
-    <p>Etymology Studio is a fully functional e-commerce website built using WordPress and WooCommerce...</p>
-  </section>
+    <header>
+      <h1>Etymology Studio</h1>
+      <p>WooCommerce Website Case Study</p>
+    </header>
 
-  <section>
-    <h2>Inspiration: Women Entrepreneurship</h2>
-    <p>This project was inspired by women entrepreneurs who turn passion into purpose...</p>
-  </section>
+    <section>
+      <h2>Project Overview</h2>
+      <p>
+        Etymology Studio is a fully functional e-commerce website built using WordPress and WooCommerce. It features engraved gifts like candles, bookmarks, and keepsakes.
+      </p>
+    </section>
 
-  <section>
-    <h2>My Role</h2>
-    <ul>
-      <li>Installed and configured WordPress + WooCommerce</li>
-      <li>Customized the Storefront theme using CSS</li>
-      <li>Designed product pages and layout using block editor</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Inspiration: Women Entrepreneurship</h2>
+      <p>
+        This project was inspired by women entrepreneurs who turn passion into purpose. I wanted the brand to reflect meaning, personalization, and empowerment.
+      </p>
+    </section>
 
-  <section>
-    <h2>Tools & Technologies</h2>
-    <p>WordPress, WooCommerce, Storefront Theme, Gutenberg, CSS, Canva, Google Analytics</p>
-  </section>
+    <section>
+      <h2>My Role</h2>
+      <ul>
+        <li>Installed and configured WordPress + WooCommerce</li>
+        <li>Customized the Storefront theme using CSS</li>
+        <li>Designed product pages and layout using block editor</li>
+      </ul>
+    </section>
 
-  <section>
-    <h2>Challenges</h2>
-    <ul>
-      <li>Limited layout flexibility in Storefront</li>
-      <li>Customizing WooCommerce filters</li>
-      <li>Implementing A/B testing layout variants</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Tools & Technologies</h2>
+      <p>WordPress, WooCommerce, Storefront Theme, Block Editor, CSS, Canva, Google Analytics</p>
+    </section>
 
-  <section>
-    <h2>Reflection</h2>
-    <p>This project helped me understand the intersection of technical skills and storytelling in web design...</p>
-  </section>
+    <section>
+      <h2>Challenges</h2>
+      <ul>
+        <li>Customizing layout without page builder plugins</li>
+        <li>Styling WooCommerce filters and widgets</li>
+        <li>Implementing A/B testing and responsive layout</li>
+      </ul>
+    </section>
 
-  <footer>
-    <p><a href="https://wcet.waketech.edu/ushrestha/WEB260/wordpress/" target="_blank">🔗 Visit Live Site</a></p>
-  </footer>
-</div>
+    <section>
+      <h2>Reflection</h2>
+      <p>
+        This project helped me understand how storytelling can be embedded into e-commerce design. I improved my skills in layout control, brand tone, and user experience.
+      </p>
+    </section>
+
+    <footer>
+      <p><a href="https://wcet.waketech.edu/ushrestha/WEB260/wordpress/" target="_blank">🔗 Visit Live Site</a></p>
+    </footer>
+
+  </div>
 </body>
 </html>
-
-
